--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
      <ul>
+          <li>Holis</li>
          <li> Vagrant </li>
          <li> Docker </li>
          <li> Ansible </li>
