--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
      <ul>
-          <li>Holis</li>
-         <li> Vagrant </li>
-         <li> Docker </li>
-         <li> Ansible </li>
-         <li> Integración continua: Madurez y resiliencia </li>
+          <li> Holis: Curso de empatia </li>
+          <li> Vagrant </li>
+          <li> Docker </li>
+          <li> Ansible </li>
+          <li> Integración continua: Madurez y resiliencia </li>
      </ul>
 </body>
 </html>
