Añadiendo redes sociales

--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
           <li> Ansible </li>
           <li> Integración continua: Madurez y resiliencia </li>
      </ul>
+
+     <h2>Redes sociales</h2>
+          <ul>
+               <li>Facebook</li>
+               <li>Instagram</li>
+               <li>Twitter</li>
+          </ul>
 </body>
 </html>
