--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
          <li> Ansible </li>
          <li> Integración continua: Madurez y resiliencia </li>
      </ul>
+     
+
+     <footer>
+          <h3>Items</h3>
+          <li>Vistanos</li>
+          <li>Mapa</li>
+          <li>Teléfono</li>
+     </footer>
 </body>
 </html>
