Agregando nuevo parrafo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
           <li> Integración continua: Madurez y resiliencia </li>
      </ul>
      
+     <p>Estos cambios en teoria deberian de quedar</p>
+
      <h2>Redes sociales</h2>
      <ul>
           <li>Facebook</li>
