Juntando cambios con stash

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
           <li>Twitter</li>
      </ul>
 
+     <h4>Otra lista nueva</h4>
+     <li></li>
+     <li></li>
+     <li></li>
+
      <footer>
      <h3>Items</h3>
           <li>Vistanos</li>
