Añadiendo plataformas de transporte

--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
           <li>Twitter</li>
      </ul>
 
-     <h4>Otra lista nueva</h4>
-     <li></li>
-     <li></li>
-     <li></li>
+     <h4>Plataformas de transporte</h4>
+     <li>Uber</li>
+     <li>IDriver</li>
 
      <footer>
      <h3>Items</h3>
